# ViLA

./: .gitignore  README.md  pyproject.toml
apps/: __init__.py
apps/visualizer/: __init__.py  __main__.py
data/anle.toaan.gov.vn/: _render_assets.py  _to_hf.py
data/anle.toaan.gov.vn/_hf/: README.md  _stats.json
docs/: 01-comparative-analysis.md  02-data-sources.md  03-curation-pipeline.md  04-unstructured-parsing.md  05-data-infrastructure.md  06-knowledge-graph.md  07-justice-flow.md  08-ai-agent.md  09-llm-integration.md  10-ui-ux.md  99-implementation-roadmap.md  README.md
docs/00-overview/: architecture.md  glossary.md  ontology.md  repo-layout.md  vn-legal-timeline.md
tests/: conftest.py
tests/e2e/: test_anle_pipeline_smoke.py
tests/unit/: test_config.py  test_congbobanan.py  test_downloader.py  test_embedder.py  test_extractor.py  test_hybrid_parser.py  test_markdown_io.py  test_nemoretriever_parser.py  test_ontology.py  test_parser.py  test_per_doc_io.py  test_pipeline_build.py  test_progress.py  test_reducer.py  test_scraper.py  test_stages.py  test_visualizer.py
